# ISC21-ONNX

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
isc21_onnx/: check_quantization_perfs.py  compare_models.py  data_reader.py  export_to_onnx.py  model.py  quantize.py
